hard-gists/7946961/run.log
=== Docker Run Log for 7946961 ===
Started at: Mi 29. Okt 17:22:49 CET 2025

[2025-10-29 17:22:50] START: Running container for 7946961
[2025-10-29 17:22:50] SUCCESS: Container fe65730077928ba87daaab7bf0bf7824a3ca491b5443dff29a06224ce66a05c4 started for 7946961
=== Container logs for 7946961 ===
  File "/snippet.py", line 42
    print "0x%08x: %-10s %s %s" % (insn.address, hexbytes(insn), insn.mnemonic, insn.op_str)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7946961 ===
[2025-10-29 17:22:52] INFO: Container fe65730077928ba87daaab7bf0bf7824a3ca491b5443dff29a06224ce66a05c4 has stopped
